--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
   <header class="header">
     <div class="container align-header">
-      <nav class="main-nav">
+      <div class="mobile-header">
         <a class="logo-header" href="./index.html">
           <span class="logo-color">Web</span>Studio
         </a>
@@ -26,20 +26,22 @@
             <use class="icon-navigation-close" href="./images/sprite.svg#icon-navigation-close"></use>
           </svg>
         </button>
-      </nav>
-      <div class="mobile-nav" data-menu>
-        <ul class="site-nav-list list">
-          <li class="site-nav-item">
-            <a class="site-nav-link" href="./index.html">Студия</a>
-          </li>
-          <li class="site-nav-item">
-            <a class="site-nav-link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="site-nav-item">
-            <a class="site-nav-link" href="">Контакты</a>
-          </li>
-        </ul>
+      </div>
 
+      <div class="mobile-nav" data-menu>
+        <nav class="main-nav">
+          <ul class="site-nav-list list">
+            <li class="site-nav-item">
+              <a class="site-nav-link" href="./index.html">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a class="site-nav-link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="site-nav-item">
+              <a class="site-nav-link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="site-contacts-list list">
           <li class="site-contacts-item">
             <a class="site-contacts-link" href="mailto:info@devstudio.com">
