--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h2 class="title">Наша команда</h2>
         <ul class="team-list list">
           <li class="cards">
-            <picture>
+            <picture class="photo-employee">
               <source srcset="./images/team/employee1-desktop.jpg 1x, ./images/team/employee1-desktop@2x.jpg 2x"
                 media="(min-width: 1200px)">
               <source srcset="./images/team/employee1-tablet.jpg 1x, ./images/team/employee1-tablet@2x.jpg 2x"
